tests/positive/rule4_optional.safe
-- Test: rule4_optional
-- Description: Optional value access with null check before dereference.
--   The access value is checked for null before any dereference,
--   so the dereference is proven safe.
-- Clause: SAFE@468cf72:spec/02-restrictions.md#2.8.4.p136:fa5e94b7
-- Expected: ACCEPT

package safe_Optional

   type value is range 0 to 10_000;
   type value_Ptr is access value;

   --  Get_Or_Default: returns the designated value if non-null,
   --  otherwise returns a default.
   function get_Or_Default (P : value_Ptr;
                            default : value) returns value

      if P != null
         --  P is provably not null by the guard.
         return P;
      else
         return default;



   --  Has_Value: checks if the pointer is non-null.
   function has_Value (P : value_Ptr) returns boolean

      return P != null;



