tests/negative/neg_own_source_maybe_null.safe
-- Test: neg_own_source_maybe_null
-- Description: Moving from a source that is not provably non-null.
-- Clause: SAFE@468cf72:spec/02-restrictions.md#2.3.2.p96a:0eaf48aa
-- Expected: REJECT move_source_not_nonnull

package move_Source_Maybe_Null_Test

   type payload is range 0 to 10;
   type payload_Ptr is access payload;

   function bad_Move
      Source : payload_Ptr = null;
      Target : payload_Ptr = null;

      Target = Source;  -- ERROR: source is not provably non-null



